--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "mkdir -p build/web && echo 'Build handled by GitHub Actions - this is a placeholder' > build/web/.vercel-placeholder",
+  "buildCommand": null,
   "outputDirectory": "build/web",
-  "ignoreCommand": "exit 0",
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD .",
   "framework": null,
   "rewrites": [
     {
