fix: disable Vercel auto-deploy completely, use GitHub Actions only

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": null,
-  "outputDirectory": "build/web",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD .",
+  "outputDirectory": null,
+  "ignoreCommand": "exit 0",
   "framework": null,
   "rewrites": [
     {
