fix: configure vercel.json for Flutter web deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": null,
-  "outputDirectory": null,
+  "outputDirectory": "build/web",
   "ignoreCommand": "exit 0",
   "framework": null,
   "rewrites": [
