--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "outputDirectory": "build/web",
   "ignoreCommand": "exit 0",
   "framework": null,
-  "_comment": "Vercel deployment configured for GitHub Actions",
+  "_comment": "Flutter web deployment - build locally with 'flutter build web --release' then deploy build/web folder",
   "rewrites": [
     {
       "source": "/((?!assets|canvaskit|icons|favicon\\.png|manifest\\.json|flutter\\.js|flutter_bootstrap\\.js|main\\.dart\\.js|flutter_service_worker\\.js|version\\.json).*)",
