--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,13 @@
   "buildCommand": null,
   "outputDirectory": "build/web",
   "framework": null,
+  "redirects": [
+    {
+      "source": "/(.+)/",
+      "destination": "/$1",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
